--- a/style.css
+++ b/style.css
@@ -52,7 +52,12 @@ body {
   border-radius: var(--spacing-regular);
   padding: var(--spacing-regular);
 }
-
+#search{
+  grid-area: search;
+  font-size: var(--font-large);
+  border-radius: var(--font-regular);
+  padding: var(--spacing-medium);
+}
 
 /* styles related to current weather data */
 
@@ -102,7 +107,42 @@ body {
 }
 #five-day-forecast{
     grid-area: fiveday;
+    text-align: center;
 }
+#day-wise-forecast .five-day-forecast-container{
+  display: grid;
+  grid-auto-flow: row;
+
+}
+.five-day-forecast-container .day-wise-forecast{
+  display: grid;
+  grid-template: auto/repeat(4,1fr);
+  gap: var(--spacing-regular);
+  place-items: center;
+
+}
+.five-day-forecast-container .day-wise-forecast .min-temp,.five-day-forecast-container .day-wise-forecast .max-temp{
+  font-size: var(--font-regular);
+  font-weight: var(--font-semibold);
+}
+.five-day-forecast-container .day-wise-forecast .min-temp{
+  opacity:50%;
+}
+.five-day-forecast-container .day-wise-forecast .max-temp{
+  justify-self: end;
+}
+.five-day-forecast-container .day-wise-forecast .icon{
+  width: 75px;
+  height: 75px;
+
+}
+.five-day-forecast-container .day-wise-forecast .day{
+  text-transform: capitalize;
+  justify-self: start;
+
+}
+
+
 #feels-like{
     grid-area: feelslike;
     text-align: center;
