--- a/style.css
+++ b/style.css
@@ -152,3 +152,16 @@ body {
     text-align: center;
 
 }
+
+@media (width>=650px){
+  .container {
+
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-areas:
+      "search search search search"
+      "current current current current"
+      "hourly hourly fiveday fiveday"
+      "feelslike humidity fiveday fiveday";
+
+  }
+}
